壹杯加咖啡初版

--- a/less/head.less
+++ b/less/head.less
@@ -115,8 +115,8 @@
 }
 
 .menu-show{
-	animation: bombLeft .5s ease-in-out forwards;
-	-webkit-animation: bombLeft .5s ease-in-out forwards;
+	animation: bombLeft 1s ease-in-out forwards;
+	-webkit-animation: bombLeft 1s ease-in-out forwards;
 
 }
 @keyframes bombLeft{
@@ -138,8 +138,8 @@
 }
 
 .menu-hide{
-	animation: bombRight .5s ease forwards;
-	-webkit-animation: bombRight .5s ease forwards;
+	animation: bombRight 1s ease forwards;
+	-webkit-animation: bombRight 1s ease forwards;
 }
 @keyframes bombRight{
 	0%{
@@ -177,7 +177,6 @@
 		.bgColor(@ms_bg);
 		>img{
 			.width-max();
-			// .margin(9px 11px 11px 13px);
 		}
 	}
 	.return-icon{
