--- a/less/home.less
+++ b/less/home.less
@@ -480,7 +480,7 @@
 					.pos(abs);
 					.left(0);
 					.top(50%);
-					.margin-tp(-37.5px);
+					.margin-tp(-@s_height / 2);
 					.padding-lt(@b_size2);
 					.width-max();
 					.height(@s_height);
