--- a/less/joinUs.less
+++ b/less/joinUs.less
@@ -4,7 +4,7 @@
 
 
 #join-us{
-	.display(n);
+	// .display(n);
 	.padding(69px 31px 90px);
 }
 
@@ -59,7 +59,6 @@
 			.us-contact-information{
 				.width-max();
 				.clearfix;
-				.color(@blod_color);
 				>img,
 				>span{
 					vertical-align: middle;
