--- a/less/storeImage.less
+++ b/less/storeImage.less
@@ -4,7 +4,7 @@
 
 
 #store-image{
-	.display(n);
+	// .display(n);
 	.padding-tp(@h_height);
 }
 .store-image{
@@ -48,17 +48,15 @@
 	.image-content{
 		.width-max();
 		.padding(50px 0);
-		.overflow-x();
 		.image-content-groups{
 			.pos(rel);
-			.left(0);
 			.width(300%);
 			.height(auto);
 			.display(f);
 			.images-content-list{
 				.width-max();
-				.padding(0 32px);
 				.flex(1);
+				.padding(0 20px);
 				>h1.level-heading-1{
 					.color(@h_color);
 					.fontSize(@b_size1);
