--- a/css/head.css
+++ b/css/head.css
@@ -138,8 +138,8 @@
   background-color: #003b65;
 }
 .menu-show {
-  animation: bombLeft 0.5s ease-in-out forwards;
-  -webkit-animation: bombLeft 0.5s ease-in-out forwards;
+  animation: bombLeft 1s ease-in-out forwards;
+  -webkit-animation: bombLeft 1s ease-in-out forwards;
 }
 @keyframes bombLeft {
   0% {
@@ -158,8 +158,8 @@
   }
 }
 .menu-hide {
-  animation: bombRight .5s ease forwards;
-  -webkit-animation: bombRight .5s ease forwards;
+  animation: bombRight 1s ease forwards;
+  -webkit-animation: bombRight 1s ease forwards;
 }
 @keyframes bombRight {
   0% {
