--- a/less/brandProject.less
+++ b/less/brandProject.less
@@ -3,7 +3,6 @@
 @import "data";
 
 #brand-project{
-	// .display(n);
 	.padding-tp(@h_height);
 }
 .brand-project{
@@ -14,7 +13,7 @@
 			.width-max();
 		}
 		.store-content{
-			.padding(22px 40px 100px);
+			.padding(22px 40px 50px);
 			h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
@@ -28,6 +27,7 @@
 		}
 	}
 	.one-space{
+		.padding-tp(49px);
 		.width-max();
 		>img{
 			.width-max();
@@ -68,7 +68,7 @@
 		.padding-tp(@s_height - 1px);
 		.college-content{
 			.width-max();
-			.padding(0 40px 78px);
+			.padding(0 40px 28px);
 			h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
@@ -95,6 +95,7 @@
 	}
 	.coffee-bus{
 		.width-max();
+		.padding-tp(49px);
 		>img{
 			.width-max();
 		}
