--- a/less/head.less
+++ b/less/head.less
@@ -115,8 +115,8 @@
 }
 
 .menu-show{
-	animation: bombLeft 1s ease-in-out forwards;
-	-webkit-animation: bombLeft 1s ease-in-out forwards;
+	animation: bombLeft .3s ease-in-out forwards;
+	-webkit-animation: bombLeft .3s ease-in-out forwards;
 
 }
 @keyframes bombLeft{
@@ -138,8 +138,8 @@
 }
 
 .menu-hide{
-	animation: bombRight 1s ease forwards;
-	-webkit-animation: bombRight 1s ease forwards;
+	animation: bombRight .3s ease forwards;
+	-webkit-animation: bombRight .3s ease forwards;
 }
 @keyframes bombRight{
 	0%{
