--- a/css/aboutBrand.css
+++ b/css/aboutBrand.css
@@ -27,6 +27,7 @@
   font-size: 20px;
   margin-left: 6px;
   margin-bottom: 12px;
+  margin-top: 24px;
 }
 .about-brand .company-introduce .introduce-content,
 .about-brand .brand-introduce .introduce-content,
