--- a/less/aboutBrand.less
+++ b/less/aboutBrand.less
@@ -22,6 +22,7 @@
 			.fontSize(@s_size0);
 			.margin-lt(@m_height + 1);
 			.margin-bm(@r_sW - 2px);
+			.margin-tp(@s_size0 + 4px);
 		}
 		.introduce-content{
 			.color(@com_color);
