--- a/less/brandProject.less
+++ b/less/brandProject.less
@@ -13,7 +13,7 @@
 			.width-max();
 		}
 		.store-content{
-			.padding(22px 40px 50px);
+			.padding(22px 40px 0);
 			h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
@@ -65,10 +65,10 @@
 	}
 	.training-college{
 		.width-max();
-		.padding-tp(@s_height - 1px);
+		.padding-tp(58px);
 		.college-content{
 			.width-max();
-			.padding(0 40px 28px);
+			.padding(0 40px 0);
 			h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
@@ -101,7 +101,7 @@
 		}
 		.bus-content{
 			.width-max();
-			.padding(21px 40px 74px);
+			.padding(21px 40px 0);
 			>h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
@@ -120,7 +120,7 @@
 		.width-max();
 		.paltform-content{
 			.width-max();
-			.padding(0 40px 100px);
+			.padding(49px 40px 100px);
 			>h1.level-heading-1{
 				.color(@h_color);
 				.fontSize(@b_size1);
