--- a/less/joinInformation.less
+++ b/less/joinInformation.less
@@ -45,7 +45,7 @@
 		}
 	}
 	.assist-service{
-		.padding-tp(@jo_pra);
+		.padding-tp(58px);
 		>h1.level-heading-1{
 			.color(@h_color);
 			.fontSize(@b_size1);
@@ -69,7 +69,7 @@
 		}
 	}
 	.join-cost{
-		.padding-tp(@jo_pra - 9px);
+		.padding-tp(58px);
 		.padding-bm(@jo_pra - 9px);
 		>h1.level-heading-1{
 			.color(@h_color);
@@ -131,7 +131,7 @@
 					}
 					.cost-para-left,
 					.cost-para-right{
-						.padding-tp(@s_size0);
+						// .padding-tp(@s_size0);
 						>p{
 							.text-al(center);
 							.fontWeight(bold);
