--- a/less/storeImage.less
+++ b/less/storeImage.less
@@ -46,7 +46,7 @@
 	}
 	.image-content{
 		.width-max();
-		.padding(50px 0);
+		// .padding(50px 0);
 		.image-content-groups{
 			.pos(rel);
 			.width(300%);
