--- a/less/home.less
+++ b/less/home.less
@@ -17,7 +17,7 @@
 	.rotation-big{
 		.pos(rel);
 		.left(0);
-		.width(400%);
+		.width(300%);
 		.display(f);
 		.rotation-big-list{
 			.flex(1);
@@ -34,7 +34,7 @@
 		.pos(abs);
 		.bottom(20px);
 		.left(50%);
-		.margin-lt(-53px);
+		.margin-lt(-40px);
 		>li{
 			.display(ib);
 			.width(@r_sW);
@@ -70,7 +70,7 @@
 			.left(0);
 			.width-max();
 			.padding(0 0 8px 30px);
-			.color(@rm_sBg);
+			.color(@white);
 			.brand-word-ch{
 				.fontSize(@b_size1);
 				// .margin-bm(4px);
