--- a/css/message.css
+++ b/css/message.css
@@ -81,3 +81,55 @@
   margin: 30px auto 50px;
   text-align: center;
 }
+.msg-bomb {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+.msg-bomb .bomb-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.8;
+  filter: alpha(opacity=8);
+}
+.msg-bomb .bomb-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -80px;
+  margin-left: -125px;
+  width: 250px;
+  height: auto;
+  background-color: #ffffff;
+  border-radius: 4px;
+}
+.msg-bomb .bomb-box > img.msg-success {
+  width: 125px;
+  margin: -48px 69.5px 10px 55.5px;
+}
+.msg-bomb .bomb-box > p.msg-content {
+  text-align: center;
+  padding: 0 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  color: #666666;
+}
+.msg-bomb .bomb-box .bomb-btn {
+  font-size: 18px;
+  background-color: #004e7e;
+  color: #ffffff;
+  margin: 10px auto;
+  text-align: center;
+  width: 146px;
+  height: 38px;
+  line-height: 38px;
+  border-radius: 4px;
+}
