壹杯加咖啡轮播图优化

--- a/css/home.css
+++ b/css/home.css
@@ -21,6 +21,7 @@
   display: -moz-flex;
   display: -o-flex;
   display: -ms-flex;
+  -wbkit-transform: translated(0, 0, 0);
 }
 .rotation .rotation-big .rotation-big-list {
   flex: 1;
