--- a/less/home.less
+++ b/less/home.less
@@ -19,6 +19,7 @@
 		.left(0);
 		.width(300%);
 		.display(f);
+		-wbkit-transform: translated(0,0,0);
 		.rotation-big-list{
 			.flex(1);
 			.rotation-big-links{
